2007-03-14  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by Geoff.

        <rdar://problem/5058714>
        http://bugs.webkit.org/show_bug.cgi?id=13050
        
        World leaks seen on Leopard after opening then closing tab (13050)

        Add a hash set to prevent the load count to be increased twice for the same resource.
        
        * WebCoreSupport/WebFrameLoaderClient.mm:
        (WebFrameLoaderClient::dispatchWillSendRequest):
        (WebFrameLoaderClient::dispatchDidFinishLoading):
        (WebFrameLoaderClient::dispatchDidFailLoading):
        * WebView/WebDocumentLoaderMac.h:
        * WebView/WebDocumentLoaderMac.mm:
        (loadingResources):
        (WebDocumentLoaderMac::increaseLoadCount):
        (WebDocumentLoaderMac::decreaseLoadCount):

2007-03-14 Adele Peterson  <adele@apple.com>

        Reviewed by Darin.

        Removed _insertTextWithEvent, _insertNewlineWithEvent, and _insertTextWithEvent.
        Instead, use execCommand and insertText methods on the Editor.

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView insertTab:]):
        (-[WebHTMLView insertBacktab:]):
        (-[WebHTMLView insertNewline:]):
        (-[WebHTMLView insertLineBreak:]):
        (-[WebHTMLView insertParagraphSeparator:]):
        (-[WebHTMLView insertNewlineIgnoringFieldEditor:]):
        (-[WebHTMLView insertTabIgnoringFieldEditor:]):
        (-[WebHTMLView yank:]):
        (-[WebHTMLView yankAndSelect:]):
        (-[WebHTMLView doCommandBySelector:]):
        (-[WebHTMLView insertText:]):

2007-03-14  David Hyatt  <hyatt@apple.com>

        Fixes to ensure that the resource loader's shared buffer can always be used.

        Reviewed by olliej, mjs

        * Misc/WebIconDatabase.mm:
        (-[WebIconDatabase _convertToWebCoreFormat]):
        * WebCoreSupport/WebFrameLoaderClient.mm:
        (WebFrameLoaderClient::deliverArchivedResources):

2007-03-13  Oliver Hunt  <oliver@apple.com>

        Reviewed by Brady.
