@@ -41,8 +41,9 @@
 #import "WebFrameInternal.h"
 #import "WebHTMLView.h"
 #import "WebHTMLViewInternal.h"
-#import "WebLocalizableStrings.h"
 #import "WebKitLogging.h"
+#import "WebKitVersionChecks.h"
+#import "WebLocalizableStrings.h"
 #import "WebNSURLExtras.h"
 #import "WebViewInternal.h"
 #import <WebCore/Document.h>
@@ -265,6 +266,11 @@ void WebEditorClient::respondToChangedSelection()
     NSView <WebDocumentView> *view = [[[m_webView selectedFrame] frameView] documentView];
     if ([view isKindOfClass:[WebHTMLView class]])
         [(WebHTMLView *)view _selectionChanged];
+
+    // FIXME: This quirk is needed due to <rdar://problem/5009625> - We can phase it out once Aperture can adopt the new behavior on their end
+    if (!WebKitLinkedOnOrAfter(WEBKIT_FIRST_VERSION_WITHOUT_APERTURE_QUIRK) && [[[NSBundle mainBundle] bundleIdentifier] isEqualToString:@"com.apple.Aperture"])
+        return;
+
     [[NSNotificationCenter defaultCenter] postNotificationName:WebViewDidChangeSelectionNotification object:m_webView];
 }
 
