@@ -1,3 +1,15 @@
+2007-03-14  David Harrison  <harrison@apple.com>
+
+        Reviewed by Maciej.
+
+        <rdar://problem/5009625> REGRESSION: Aperture 1.5: Can't select entire line of text after correcting a misspelled word
+
+        * WebCoreSupport/WebEditorClient.mm:
+        (WebEditorClient::respondToChangedSelection):
+        * WebCoreSupport/WebFrameBridge.mm:
+        Provide compatibility by not sending WebViewDidChangeSelectionNotification if
+        the app is Aperture and is linked against WebKit 2.0.
+
 2007-03-14  Anders Carlsson  <acarlsson@apple.com>
 
         Reviewed by Geoff.
